examples/kju/positive/minimal/minimal_example_int_zero.kju
fun kju():Int{
  return 0;
}
