examples/kju/negative/structs/same_names.kju
struct A
{
}

struct A
{
}

fun kju() : Unit
{
}